# open_sfm

./: CMakeLists.txt  README.md
src/geometry/: map_initializer.cc
tools/: rec_euroc.cc
